[package]
name = "img-token"
version = "0.1.0"
description = "token with tax and rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "img_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
jupiter-cpi = "4.0.0"
